--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ewents-rtc",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
@@ -37,5 +37,8 @@
     "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "qrcode": "^1.5.4"
   }
 }
